--- a/notebooks/requirements.txt
+++ b/notebooks/requirements.txt
@@ -1,6 +1,11 @@
 pandas
 numpy
 scikit-learn
-requests
 matplotlib
 pytest
+tqdm
+tabulate
+flask==2.3.3
+flask-cors==4.0.0
+requests==2.31.0
+gunicorn==21.2.0
