--- a/.gitignore
+++ b/.gitignore
@@ -23,8 +23,7 @@ __pycache__/
 # Archivos de Datos Generados
 # CRÍTICO: No subir datasets grandes, logs ni el input XML/JSON
 # =========================
-data/final_dataset.csv
-data/user_ratings.csv
+data/*.csv
 data/*.json
 data/*.log
 data/*.xml
